# aria

./: CMakeLists.txt  README.txt
aria/: ArCondition_LIN.cpp  ArJoyHandler_LIN.cpp  ArMutex_LIN.cpp  ArSerialConnection_LIN.cpp  ArSignalHandler_LIN.cpp  ArSocket_LIN.cpp  ArThread_LIN.cpp  CMakeLists.txt  aria.pc.in
aria/advanced/: CMakeLists.txt  actsDemo.cpp  actsDemoSimple.cpp  amptuDemo.cpp  condition.cpp  functorListsAndStdAlgorithms.cpp  joydriveActionMod.cpp  joydriveActionModule.cpp  joydriveUserControl.cpp  peoplebotDemo.cpp  sickAutoLogger.cpp  sickSpinLogger.cpp  sickSquareLogger.cpp
aria/doc/: CMakeLists.txt  doxygen.conf.in  overview.dox  params.dox
aria/doc/options/: all_options.dox
aria/examples/: CMakeLists.txt  README.txt  actionExample.cpp  actionGroupExample.cpp  actsColorFollowingExample.cpp  armExample.cpp  auxSerialExample.cpp  configExample.cpp  demo.cpp  directMotionExample.cpp  dpptuExample.cpp  functorExample.cpp  gotoActionExample.cpp  gpsExample.cpp  gpsRobotTaskExample.cpp  gripperExample.cpp  gyroExample.cpp  ipthru.cpp  joydriveActionExample.cpp  joydriveThreaded.cpp  joydriveUserTask.cpp  lineFinderExample.cpp  moduleExample.cpp  moduleExample_Mod.cpp  netServerExample.cpp  robotConnectionCallbacks.cpp  robotSyncTaskExample.cpp  sickLogger.cpp  sickRobotExample.cpp  sickTeleop.cpp  simpleConnect.cpp  simpleMotionCommands.cpp  socketClientExample.cpp  socketServerExample.cpp  sonyPTZDemo.cpp  soundsQueueExample.cpp  teleopActionsExample.cpp  threadExample.cpp  triangleDriveToActionExample.cpp  twoRobotWander.cpp  (+3 more)
aria/java/: Ar3DPoint.java  ArACTSBlob.java  ArACTS_1_2.java  ArAMPTU.java  ArAMPTUCommands.java  ArAMPTUPacket.java  ArASyncTask.java  ArAction.java  ArActionAvoidFront.java  ArActionAvoidSide.java  ArActionBumpers.java  ArActionColorFollow.java  ArActionConstantVelocity.java  ArActionDeceleratingLimiter.java  ArActionDesired.java  ArActionDesiredChannel.java  ArActionDriveDistance.java  ArActionGoto.java  ArActionGotoStraight.java  ArActionGroup.java  ArActionGroupColorFollow.java  ArActionGroupInput.java  ArActionGroupRatioDrive.java  ArActionGroupRatioDriveUnsafe.java  ArActionGroupStop.java  ArActionGroupTeleop.java  ArActionGroupUnguardedTeleop.java  ArActionGroupWander.java  ArActionIRs.java  ArActionInput.java  ArActionJoydrive.java  ArActionKeydrive.java  ArActionLimiterBackwards.java  ArActionLimiterForwards.java  ArActionLimiterTableSensor.java  ArActionMovementParameters.java  ArActionRatioInput.java  ArActionRobotJoydrive.java  ArActionStallRecover.java  ArActionStop.java  (+278 more)
aria/pythonExamples/: README.txt  basicActions.py  configExample.cfg  configExample.py  customActions.py  pythonThreadTest.py  rangeDeviceReading.py  robotSyncTaskExample.py  simple.py  teleop.py
arnetworking/: ArCentralForwarder.cpp  ArCentralForwarder.h  ArCentralManager.cpp  ArCentralManager.h  ArClientArgUtils.cpp  ArClientArgUtils.h  ArClientBase.cpp  ArClientBase.h  ArClientCommands.h  ArClientData.cpp  ArClientData.h  ArClientFileUtils.cpp  ArClientFileUtils.h  ArClientHandlerConfig.cpp  ArClientHandlerConfig.h  ArClientSimpleConnector.cpp  ArClientSimpleConnector.h  ArClientSwitchManager.cpp  ArClientSwitchManager.h  ArHybridForwarderVideo.cpp  ArHybridForwarderVideo.h  ArMapChanger.cpp  ArMapChanger.h  ArNetPacket.cpp  ArNetPacket.h  ArNetPacketReceiverTcp.cpp  ArNetPacketReceiverTcp.h  ArNetPacketReceiverUdp.cpp  ArNetPacketReceiverUdp.h  ArNetPacketSenderTcp.cpp  ArNetPacketSenderTcp.h  ArNetworking.h  ArServerBase.cpp  ArServerBase.h  ArServerClient.cpp  ArServerClient.h  ArServerClientData.h  ArServerClientIdentifier.h  ArServerCommands.h  ArServerData.cpp  (+48 more)
arnetworking/ddd/: CommandLineOptions.txt  CommandLineOptions.txt.in  Makefile  doxygen.conf
arnetworking/ddd/javaExamples/: README.txt  customClientExample.java  customServerExample.java  simple.java
arnetworking/ddd/pythonExamples/: customClientExample.py  customServerExample.py  drawingsExample.py  simple.py
arnetworking/ddd/tests/: baseTest.cpp  cameraModeClient.cpp  clientLoadMap.cpp  clientLocalizeToPose.cpp  clientPatrol.cpp  commandTestClient.cpp  commandTestServer.cpp  fileClient.cpp  fileClientRaw.cpp  fileServer.cpp  fileToServer.cpp  idleClient.cpp  infoDrawingClient.cpp  infoDrawingServer.cpp  mapClient.cpp  mapServer.cpp  md5test.cpp  modeInfoClient.cpp  reloadConfig.cpp  simpleServerTest.cpp  standaloneClientDemo.cpp  standaloneServerDemo.cpp  switchServer.cpp  switchWatcher.cpp  testClient.cpp  testRequestOnce.cpp  testServer.cpp  userServerTest.cpp  watchDockInfo.cpp
arnetworking/examples/: CMakeLists.txt  clientCommandLister.cpp  clientDemo.cpp  configClient.cpp  configClientToServer.cpp  configServer.cpp  configServerRobot.cpp  drawingsExample.cpp  drawingsExampleWithRobot.cpp  getVideoExample.cpp  popupExample.cpp  ptzCameraClientExample.cpp  serverDemo.cpp  simpleServerExample.cpp
debian/: README.Debian  README.source  changelog  control  copyright  libaria-dev.install  libaria-doc.doc-base  libaria-doc.install  libaria2.7.install  rules
debian/patches/: debian-changes-2.7.3-1  series
